# fun-university-projects

./: README.md
functional_haskell/PS/ps2/: 6.1.hs  (+2 more)
functional_haskell/final/: practice_final.hs  practice_midterm.hs
functional_haskell/notes/: 1.19.hs  2.2.hs  Monad_.hs
functional_haskell/pa0/: Hello  Hello.hi  Hello.hs  README.md
functional_haskell/pa1/: Makefile  README.md  Wordle.hi  Wordle.hs  correct-output-1.txt  correct-output-2.txt  correct-output-3.txt  curry.txt  feedback.txt  how-to-play.txt  input-1.txt  input-2.txt  input-3.txt  input-output-1.txt  input-output-2.txt  input-output-3.txt  invalid-game-number.txt  output-1.txt  usage.txt  wordle
functional_haskell/pa2/: README.md  Wordle.hs  wordle.cabal
functional_haskell/pa3/: Interval.hs  Main.hs  Makefile  test_expectation.txt  test_inputs.txt
functional_haskell/pa4/: Tester.hs  code128.cabal
functional_haskell/pa5/: Code128.hs  HipBarcodes.hs  Tester.hs  code128.csv  hip-barcodes.cabal
functional_haskell/pa5/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
functional_haskell/pa6/: MazeSolver.hs  maze-solver.cabal
functional_haskell/pa6/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
functional_haskell/pa6/mazes/: maze-01.txt  maze-02.txt  maze-03.txt  maze-04.txt  maze-05.txt  maze-06.txt  maze-07.txt  maze-08.txt
functional_haskell/pa7/: Cards.hs  MonadicShuffle.hs  RandomWars.hs  RawShuffle.hs  StateFunc.hs  Tester.hs  feedback.txt  random-wars.cabal
functional_haskell/pa7/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw2/: Makefile  experiments.py
hw2/output/: concurrent.txt  dispatcher_rate.txt  squeue.txt
hw3a/: main.c  script.sh
hw3a/slurm_out/: 80244.slurm2.stderr  80250.slurm2.stderr  80280.slurm2.stdout
hw3a/slurm_sinks/: fair_test_output.txt  ls_output.txt
hw3b/: Makefile  experiment.py  main.c
hw3b/slurm_out/: 83460.slurm2.stdout
hw3b/slurm_sinks/: awe_output.txt  es8000_output.txt  oh_output.txt  us4000_output.txt  us8000_output.txt  viz.py
hw3b/utils/: generators.c  packetsource.c  stopwatch.h
parallel_computing/hw2/: fifo_test.py  main.c
parallel_computing/hw3a/: Makefile  correct_test.py  experiments.py
parallel_computing/hw3b/: script.sh
(+27 files in other folders)
